# lkonf

./: Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  call_chunk.c  construct.c  copy_table_keys.c  destruct.c  error_to_string.c  find_table.c  find_table_by_key.c  find_table_by_keys.c  find_table_by_path.c  format_keys.c  get_boolean.c  get_double.c  get_error_code.c  get_error_string.c  get_instruction_limit.c  get_integer.c  get_lua_State.c  get_string.c  getkey_boolean.c  getkey_double.c  getkey_integer.c  getkey_string.c  internal.h  lkonf.3  lkonf.h  load_file.c  load_string.c  luaconfig.h  luaconfig_construct.c  luaconfig_destruct.c  lukonf.h  reset_error.c  set_error.c  set_instruction_limit.c  state_entry_exit.c
tests/: Makefile.am  Makefile.in  construct.at  destruct.at  get_boolean.at  get_double.at  get_integer.at  get_string.at  getkey_boolean.at  getkey_integer.at  getkey_string.at  instruction_limit.at  lkonf.c  lkonf_test.c  lkonf_unittest.c  load_file.at  load_string.at  luaconfig_test.c  lukonf_test.c  package.m4  testsuite  testsuite.at  unittest_lkonf.c
tests/files/: print.lua  simple.lua
